--- a/src/styles/author.css
+++ b/src/styles/author.css
@@ -1,14 +1,14 @@
 
 .author {
   margin-top: 1rem;
-  color: #fe2079;
+  color: #0cb6ec;
   font-family: 'Retro', Inconsolata, monospace;
-  text-shadow: 0 0 40px #fe2079;
+  text-shadow: 0 0 40px #0cb6ec;
   font-size: 2rem;
 }
 
 .author > a {
-  color: #fe2079;
+  color: #0cb6ec;
   text-decoration: none;
 }
 
@@ -19,13 +19,13 @@
 
 @media screen and (max-width: 992px) {
 .author {
-  text-shadow: 0 0 15px #fe2079;
+  text-shadow: 0 0 15px #0cb6ec;
 }
 }
 
 @media screen and (max-width: 600px) {
 .author {
   font-size: 1.5rem;
-  text-shadow: 0 0 15px #fe2079;
+  text-shadow: 0 0 15px #0cb6ec;
 }
 }
