--- a/src/styles/gameMenu.css
+++ b/src/styles/gameMenu.css
@@ -59,10 +59,10 @@
 }
 
 .game__menu-title {
-  color: #fe2079;
+  color: #14e8bb;
   font-family: 'Retronoid', -apple-system, BlinkMacSystemFont;
   font-size: 4rem;
-  text-shadow: 0 0 5px #fe2079;
+  text-shadow: 0 0 5px  #14e8bb;
   margin-top: 2rem;
   margin-bottom: 2rem;
 }
@@ -82,21 +82,21 @@
 }
 
 .game__score-gameover {
-  color: #fe2079;
+  color: #14e8bb;
   font-family: 'Retronoid', Inconsolata, monospace;
   font-size: 12rem;
-  text-shadow: 0 0 10px #fe2079;
+  text-shadow: 0 0 10px #14e8bb;
   margin: 0;
   margin-bottom: 2rem;
 }
 
 .game__score-title {
-  color: #fe2079;
+  color: #14e8bb;
   font-family: 'Retro', Inconsolata, monospace;
   font-weight: 500;
   font-size: 4rem;
   text-align: center;
-  text-shadow: 0 0 40px #fe2079;
+  text-shadow: 0 0 40px #14e8bb;
   margin: 0;
   margin-bottom: 1rem;
 }
@@ -107,7 +107,7 @@
   font-size: 10rem;
   font-weight: 500;
   text-align: center;
-  text-shadow: 0 0 20px #fe2079;
+  text-shadow: 0 0 20px #14e8bb;
   margin: 0;
 }
 
@@ -115,7 +115,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  text-shadow: 0 0 20px #fe2079;
+  text-shadow: 0 0 20px #14e8bb;
   margin-bottom: 2rem;
 }
 
@@ -131,7 +131,7 @@
 }
 
 .game__score-number {
-  color: #fe2079;
+  color: #14e8bb;
   margin-right: 1rem;
 }
 
@@ -154,8 +154,8 @@
   border: 0;
   font-family: 'Retronoid', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 6rem;
-  color: #fe2079;
-  text-shadow: 0 0 40px #fe2079;
+  color: #14e8bb;
+  text-shadow: 0 0 40px #14e8bb;
 }
 
 .game__menu-button-instructions {
@@ -164,8 +164,8 @@
   border: 0;
   font-family: 'Retro', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 2rem;
-  color: #fe2079;
-  text-shadow: 0 0 40px #fe2079;
+  color: #14e8bb;
+  text-shadow: 0 0 40px #14e8bb;
 }
 
 .game__menu-button-music {
@@ -176,8 +176,8 @@
   margin-top: 8rem;
   font-family: 'Commando', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 2rem;
-  color: #fe2079;
-  text-shadow: 0 0 20px #fe2079;
+  color: #14e8bb;
+  text-shadow: 0 0 20px #14e8bb;
 }
 
 .game__menu-musicinfo {
@@ -185,16 +185,16 @@
   margin-bottom: 0.5rem;
   font-family: 'Commando', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 1.5rem;
-  color: #fe2079;
-  text-shadow: 0 0 20px #fe2079;
+  color: #14e8bb;
+  text-shadow: 0 0 20px #14e8bb;
 }
 
 .game__menu-controls {
   margin-top: 2rem;
   margin-bottom: 0.5rem;
   font-size: 3rem;
-  color: #fe2079;
-  text-shadow: 0 0 20px #fe2079;
+  color: #0cb6ec;
+  text-shadow: 0 0 20px #0cb6ec;
 }
 
 .game__menu-controls > h1 {
@@ -233,7 +233,7 @@
 
 .game__menu-button {
   font-size: 4rem;
-  text-shadow: 0 0 15px #fe2079;
+  text-shadow: 0 0 15px #14e8bb;
 }
 
 .game__menu-button-music {
@@ -241,12 +241,12 @@
 }
 
 .game__menu-warning {
-  text-shadow: 0 0 15px #fe2079;
+  text-shadow: 0 0 15px #14e8bb;
 }
 
 .game__score-gameover {
   font-size: 8rem;
-  text-shadow: 0 0 10px #fe2079;
+  text-shadow: 0 0 10px #14e8bb;
 }
 
 .game__score-title {
@@ -313,7 +313,7 @@
 
 .game__menu-button {
   font-size: 3rem;
-  text-shadow: 0 0 15px #fe2079;
+  text-shadow: 0 0 15px #14e8bb;
 }
 
 .game__menu-button-music {
@@ -322,22 +322,22 @@
 
 .game__menu-warning {
   font-size: 1rem;
-  text-shadow: 0 0 15px #fe2079;
+  text-shadow: 0 0 15px #14e8bb;
 }
 
 .game__score-gameover {
   font-size: 4rem;
-  text-shadow: 0 0 10px #fe2079;
+  text-shadow: 0 0 10px #14e8bb;
   margin-bottom: 1rem;
 }
 
 .game__score-title {
   font-size: 2rem;
-  text-shadow: 0 0 5px #fe2079;
+  text-shadow: 0 0 5px #14e8bb;
 }
 
 .game__score {
   font-size: 4rem;
-  text-shadow: 0 0 10px #fe2079;
+  text-shadow: 0 0 10px #14e8bb;
 }
 }
