--- a/src/styles/hud.css
+++ b/src/styles/hud.css
@@ -1,6 +1,6 @@
 .hud {
   font-family: 'Retro', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  text-shadow: 0 0 40px #fe2079;
+  text-shadow: 0 0 40px #14e8bb;
   color: #eee;
   font-size: 8rem;
   font-weight: 700;
@@ -12,7 +12,7 @@
     opacity: 1;
   }
   50% {
-    color: #fe2079;
+    color: #14e8bb;
     opacity: 0.7;
   }
   100% {
@@ -76,7 +76,7 @@
 }
 
 .score__title {
-  color: #fe2079;
+  color: #14e8bb;
   font-size: 3rem;
   font-weight: 500;
   margin: 0;
@@ -103,7 +103,7 @@
   opacity: 0.3;
   padding-left: 2rem;
   padding-right: 2rem;
-  color: #fe2079;
+  color: #14e8bb;
   border: none;
   display: flex;
   align-items: center;
@@ -116,8 +116,8 @@
   -moz-user-select: none; /* Firefox */
   -ms-user-select: none; /* IE10+/Edge */
   user-select: none; /* Standard */
-  box-shadow: 0 0 40px #fe2079;
-  text-shadow: 0 0 40px #fe2079;
+  box-shadow: 0 0 40px #14e8bb;
+  text-shadow: 0 0 40px #14e8bb;
 }
 
 .control-active {
@@ -158,7 +158,7 @@
     font-size: 1rem;
   }
   .hud {
-    text-shadow: 0 0 15px #fe2079;
+    text-shadow: 0 0 15px #14e8bb;
     font-size: 5rem; 
   }
 
@@ -166,6 +166,6 @@
     padding-left: 1rem;
     padding-right: 1rem;
     font-size: 4rem;
-    box-shadow: 0 0 10px #fe2079;
+    box-shadow: 0 0 10px #14e8bb;
   }
 }
